--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     ports:
       - "5000:5000"
   db:
-    image: mysql:5.7
+    image: mysql
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: 1201
     volumes:
       - ./db:/docker-entrypoint-initdb.d/:ro
