--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,11 @@
-FROM python
-
+FROM python:3.8-slim-buster
 EXPOSE 5000
-
 WORKDIR /app
 
+# Install any needed packages specified in requirements.txt
 COPY requirements.txt /app
 RUN pip install -r requirements.txt
 
+# Run app.py when the container launches
 COPY app.py /app
 CMD python app.py
