--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,7 @@
-version: "2"
+version: '3'
 services:
-  app:
+  flask-app:
+
     build: ./app
-    links:
-      - db
     ports:
       - "5000:5000"
-  db:
-    image: mysql
-    ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: 1201
-    volumes:
-      - ./db:/docker-entrypoint-initdb.d/:ro
