--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,8 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: order
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 1201
-      TZ: Asia/Shanghai
+      - MYSQL_ROOT_PASSWORD
+      - TZ: Asia/Shanghai
     restart: always
     volumes:
       - "~/mysql/mydir:/mydir"
