--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD: 1201
-      - TZ: Asia/Shanghai
+      - "MYSQL_ROOT_PASSWORD: 1201"
+      - "TZ: Asia/Shanghai"
     restart: always
     volumes:
       - "~/mysql/mydir:/mydir"
