--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./app
     ports:
       - "5000:5000"
-  order_mysql:
+  my_mysql:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     container_name: "flask_mysql"
