--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     container_name: "flask_mysql"
+    expose:
+      - 3307
     ports:
-      - "3307:3306"
+      - "3306:3306"
     environment:
       - "MYSQL_ROOT_PASSWORD=1201"
       - "TZ: Asia/Shanghai"
